--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# =============Database config==================
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/partner
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
 
+# =============Microservice config==================
+server.port=8081
+spring.application.name=partner-manage-service
+spring.cloud.compatibility-verifier.enabled=false
+
+# =============Fix bug running==================
+spring.main.allow-bean-definition-overriding=true
