--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # =============Microservice config==================
 server.port=8081
-spring.application.name=partner-manage-service
+spring.application.name=partner-service
 spring.cloud.compatibility-verifier.enabled=false
 
 # =============Fix bug running==================
